# OCaml-GLib2

./: .travis-build-with-jbuilder.sh  .travis-build.sh  .travis-glib.sh  .travis-gobject-introspection.sh  .travis-libffi.sh  .travis.yml  README.md  dune-project  gi-glib2.opam  ocaml-glib2.opam  tags
config/: discover.ml
generator/: dune  gen.ml  jbuild
lib/: .merlin  AsyncQueue.ml  AsyncQueue.mli  BookmarkFile.ml  BookmarkFile.mli  ByteArray.ml  ByteArray.mli  Bytes.ml  Bytes.mli  Checksum.ml  Checksum.mli  Core.ml  Core.mli  DLList.ml  Date.ml  Date.mli  DateTime.ml  DateTime.mli  Dir.ml  Dir.mli  Dllist.ml  Error.ml  GCallback.ml  HashTable.ml  HashTableIter.ml  HashTableIter.mli  Hash_table.ml  Hook.ml  Hook.mli  HookList.ml  HookList.mli  IOChannel.ml  IOChannel.mli  KeyFile.ml  KeyFile.mli  Key_file.ml  Key_file.mli  List.ml  MainContext.ml  MainContext.mli  (+75 more)
patches/: 0001-Make-GLib.Core.check_version-returning-a-string-opti.p
tests/: TestUtils.ml  Test_hash_table.ml  Test_random.ml  constants.ml  date.ml  dune  enums.ml  functions.ml  jbuild  test_c_string_utilities.ml  test_constants.ml  test_date.ml  test_date_time.ml  test_dllist.ml  test_enums.ml  test_functions.ml  test_hash_table.ml  test_random.ml  test_sequence.ml  test_sllist.ml  test_time_val.ml  test_utils.ml  tests.ml
tools/: dune  jbuild  list_targets.ml
travis/: Dockerfile.centos-6  Dockerfile.centos-7  Dockerfile.debian-buster  Dockerfile.fedora  Dockerfile.fedora-29  Dockerfile.ubuntu-16.04  Dockerfile.ubuntu-17.04  Dockerfile.ubuntu-17.10  Dockerfile.ubuntu-18.04  Dockerfile.ubuntu-18.10  initialize_ocaml_environment.sh  runtest.sh  show_versions.sh
