opam-version: "1.2"
name: "gi-glib2"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/OCaml-GLib2"
bug-reports: "https://github.com/cedlemo/OCaml-GLib2/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/OCaml-GLib2"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "ctypes"
  "ctypes-foreign"
  "memcpy"
  "ounit"
  "base"
  "stdio"
  "configurator"
  "gobject-introspection"
  "gi-bindings-generator"
  ]
